# Dusk-mk4-examples

./: CMakeLists.txt
assets/sponza/: sponza.dmfz  sponza.mtl
cameras/: CMakeLists.txt
cameras/assets/: default.fs.glsl  default.vs.glsl
cameras/assets/sponza/: sponza.dmfz  sponza.mtl
cameras/src/: main.c
flat/src/: main.c
phong/src/: main.c
textured/assets/: textured.fs.glsl
textured/src/: main.c
wave/src/: main.c
